Fixed font color so it switches with dark mode

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -127,7 +127,7 @@
     h2 {
       flex-shrink: 0;
       margin-right: get-size('base');
-      color: var(--color-dark);
+      color: var(--color-theme-dark);
     }
 
     h2 a {
